# smart-pathbuf

./: .travis.yml  Cargo.toml  README.md
benches/: smart_pathbuf.rs
src/: lib.rs  s_path.rs  s_path_buf.rs
