[package]
name = "smart-path"
version = "0.1.0"
authors = ["Devin R <devin.ragotzy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "smart_pathbuf"
harness = false

[lib]
bench = false

[features]
default=[]
unstable=[]
