[package]
name = "smart-path"
version = "0.3.0"
authors = ["Devin R <devin.ragotzy@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Wrapper to extend PathBuf's functionality"
repository = "https://github.com/DevinR528/smart-pathbuf"
keywords = ["Path", "PathBuf", "Wrapper"]
categories = ["filesystem", "api-bindings"]
edition = "2018"
readme = "README.md"


[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "smart_pathbuf"
harness = false

[lib]
bench = false

[features]
default=[]
unstable=[]
